[package]
name = "pdf_grab"
version = "0.1.0"
authors = ["oren <oren@cynerio.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
regex = "1.4.2"
pdf-extract = "0.6.2"